objects/WT_Client_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>WT_Account_Classification__c</fullName>
        <label>Account Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                    <label>C = Customer</label>
                </value>
                <value>
                    <fullName>C1</fullName>
                    <label>C1 = Top Priority Customer</label>
                </value>
                <value>
                    <fullName>C2</fullName>
                    <label>C2 = Medium Priority Customer</label>
                </value>
                <value>
                    <fullName>C3</fullName>
                    <label>C3 = Established Customer</label>
                </value>
                <value>
                    <fullName>C4</fullName>
                    <label>C4 = Customer - PPP Onboarding</label>
                </value>
                <value>
                    <fullName>NQ</fullName>
                    <label>NQ = Middle Market (Revenue $10MM to $260MM)</label>
                </value>
                <value>
                    <fullName>NQ0</fullName>
                    <label>NQ0 = Companies with Unknown Revenue</label>
                </value>
                <value>
                    <fullName>NQBB</fullName>
                    <label>NQBB = Companies with Revenue $1.00MM to $9.99MM)</label>
                </value>
                <value>
                    <fullName>NQSB</fullName>
                    <label>NQSB = Companies with Revenue under $1MM</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <label>P1 = Proposing within 6 months/Top Prospect</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>P2 = Proposing in 6-12 months</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <label>P3 = Proposing outside 12 months</label>
                </value>
                <value>
                    <fullName>P4</fullName>
                    <label>P4 = Other</label>
                </value>
                <value>
                    <fullName>P5</fullName>
                    <label>P5 = PPP Lead</label>
                </value>
                <value>
                    <fullName>X1</fullName>
                    <label>X1 = EdFAC</label>
                </value>
                <value>
                    <fullName>X2</fullName>
                    <label>X2 = Bankrupt/Out of Business</label>
                </value>
                <value>
                    <fullName>X3</fullName>
                    <label>X3 = Industry Excluded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_All_Other_Lines_of_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Other Lines of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Coverage_Time_Period_Type__c</fullName>
        <label>Coverage Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Include_Annual_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DBSFCRM - 2736</description>
        <label>Include Annual Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_CRA_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include CRA Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_CRA_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include CRA Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_Standard_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Standard Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Include_WFG_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include WFG Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Lines_of_Business__c</fullName>
        <label>Lines of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABL</fullName>
                </value>
                <value>
                    <fullName>Agricultural Lending</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>Community Advantage</fullName>
                </value>
                <value>
                    <fullName>Community Banking</fullName>
                </value>
                <value>
                    <fullName>Community Impact</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Government Funds</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>MAD - Managed Assets Division</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>Professional Practice Group</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Support Role</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Syndication/Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Treasury Management, Wealth - Chicago Trust</fullName>
                </value>
                <value>
                    <fullName>Wealth - Great Lakes Advisors</fullName>
                </value>
                <value>
                    <fullName>Wealth - Wintrust Investments</fullName>
                </value>
                <value>
                    <fullName>Wealth Management, Wealth Services</fullName>
                </value>
                <value>
                    <fullName>Wintrust Funds Group</fullName>
                </value>
                <value>
                    <fullName>Wintrust Receivables Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Months__c</fullName>
        <label>Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Relationship_Classification__c</fullName>
        <label>Relationship Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                    <label>C = Customer</label>
                </value>
                <value>
                    <fullName>C1</fullName>
                    <label>C1 = Top Priority Customer</label>
                </value>
                <value>
                    <fullName>C2</fullName>
                    <label>C2 = Medium Priority Customer</label>
                </value>
                <value>
                    <fullName>C3</fullName>
                    <label>C3 = Established Customer</label>
                </value>
                <value>
                    <fullName>C4</fullName>
                    <label>C4 = Customer - PPP Onboarding</label>
                </value>
                <value>
                    <fullName>NQ</fullName>
                    <label>NQ = Middle Market (Revenue $10MM to $260MM)</label>
                </value>
                <value>
                    <fullName>NQ0</fullName>
                    <label>NQ0 = Companies with Unknown Revenue</label>
                </value>
                <value>
                    <fullName>NQBB</fullName>
                    <label>NQBB = Companies with Revenue $1.00MM to $9.99MM)</label>
                </value>
                <value>
                    <fullName>NQSB</fullName>
                    <label>NQSB = Companies with Revenue under $1MM</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <label>P1 = Proposing within 6 months/Top Prospect</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>P2 = Proposing in 6-12 months</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <label>P3 = Proposing outside 12 months</label>
                </value>
                <value>
                    <fullName>P4</fullName>
                    <label>P4 = Other</label>
                </value>
                <value>
                    <fullName>P5</fullName>
                    <label>P5 = PPP Lead</label>
                </value>
                <value>
                    <fullName>X1</fullName>
                    <label>X1 = EdFAC</label>
                </value>
                <value>
                    <fullName>X2</fullName>
                    <label>X2 = Bankrupt/Out of Business</label>
                </value>
                <value>
                    <fullName>X3</fullName>
                    <label>X3 = Industry Excluded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Total_Number_of_Activities_Required__c</fullName>
        <label>Total Number of Activities Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Client Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>WT_Total_Number_of_Activities_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Coverages</pluralLabel>
    <recordTypes>
        <fullName>WT_Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Relationship</fullName>
        <active>true</active>
        <label>Relationship</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>